# juridico-platform

./: .env.example  .gitignore  Makefile  Pendencia.md  README.md  docker-compose.yml  pendencias.md  pyproject.toml
.github/workflows/: .gitkeep  ci.yml
docker/compose/: base.yml  fiscal.yml  frontend.yml  ingest.yml  monitoring.yml  ollama.yml  traefik.yml
docker/config/: alertmanager.yml  loki.yml  neo4j.conf  pgbouncer-init.sh  prometheus.yml  promtail.yml
docs/: API-GUIDELINES.md  DEPLOY.md  DESIGN-BRIEF-DEFENSOR.md  INCIDENT-PLAYBOOK.md  NETWORK-ALLOWLIST.md  PRODUCTION-READINESS.md  PROTOCOLO-AUTOMACAO.md  Plano-Integracao-Trilingue-Python-Elixir-Rust.docx  ROADMAP.md  ROPA.md  SEAMS_README.md  alert.v1.json  engines.py  new-product-checklist.md  publishers.py  scoring.py  test_alert_contract.py  test_score_engine_contract.py
docs/design_handoff_plataforma_juridico_contabil/: Plataforma.dc.html  README.md
frontend/: .dockerignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
infra/scripts/: backup.sh  setup-docker.sh
infra/terraform/: README.md
scripts/: bootstrap-db.sql  check_docker_security.py  migrate.py  scaffold_product.py  seed_fiscal.py  validate_schema.py
scripts/migrations/: 001_ledger_entry_index_unique_and_anchors_rls.sql  002_users_password_and_auth.sql  003_fiscal_schema.sql  004_jurimetria_schema.sql
services/ai-engine/: README.md
services/audit/: README.md  __init__.py  benford.py  zscore.py
services/chamber_profiler/: __init__.py  profile.py  queries.py
services/compliance/: __init__.py  monitor.py  rules.py
services/concilia/: __init__.py  recommender.py
services/defensor/: __init__.py  orchestrator.py  protocolar.py
services/early_warning/: __init__.py  detect.py  queries.py
services/fiscal/: Dockerfile  README.md  __init__.py  celery_app.py  repository.py  requirements.txt  storage.py  tasks.py
services/forecasting/: __init__.py  forecast.py  queries.py
services/gateway/: Dockerfile  main.py  middleware.py  observability.py  requirements.txt
services/ingest/: Dockerfile  README.md  celery_app.py  requirements.txt
services/jurimetria/: __init__.py  queries.py
services/knowledge_graph/: __init__.py  analysis.py  queries.py
services/licitawatch/: __init__.py  monitor.py  rules.py
services/petibot/: __init__.py  assembler.py
services/scoring/: README.md  __init__.py  celery_app.py  features.py  idempotency.py  requirements.txt  tasks.py  validation.py
services/second_opinion/: __init__.py  consensus.py
services/settlement_optimizer/: __init__.py  optimize.py
services/shared/: audit_log.py  config.py  db.py  lgpd.py  lgpd_crypto.py  redis_client.py  tenant_db.py  tpu.py  tpu_seed.py
services/taxpredict/: README.md  __init__.py  celery_app.py  tasks.py
tests/e2e/: README.md  test_gateway_e2e.py
tests/integration/: test_auth_login.py  test_fiscal_schema.py  test_migrations.py  test_tenant_isolation.py
tests/load/: locustfile.py
tests/unit/: test_abj_contract.py  test_anomaly_detector.py  test_audit_log.py  test_bcb_collector.py  test_benford.py  test_chamber_profiler.py  (+62 more)
(+195 files in other folders)
