[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests", "services"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--tb=short",
    "--strict-markers",
    "-q",
]

[tool.coverage.run]
source = ["services"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/migrations/*",
    # Módulos de Fase 1+ (sem testes unitários ainda)
    "services/shared/ai/*",
    "services/shared/db.py",
    "services/shared/redis_client.py",
    "services/shared/alerts/publishers.py",  # requer PG — testar em integração
    "services/gateway/*",                    # requer servidor + JWT — testar em E2E
    "services/scoring/engine/model.py",      # substituído por engines.py (SEAMS)
    "services/compliance/*",
    "services/ingest/tasks/*",    # tarefas Celery — requerem broker, testar em integração
    "services/scoring/tasks.py",  # tarefa Celery — requer broker
    "services/scoring/celery_app.py",
    "services/taxpredict/*",
]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
